k8sfrontend/manifests/gcloud_service.yaml
# NODEPORT SERVICE - REQUIRES INGRESS
apiVersion: v1
kind: Service
metadata:
  name: k8sfrontend-svc
  #namespace: logoutput
spec:
  type: NodePort
  selector:
    app: k8sfrontend
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 8080
