k8sfrontend/manifests/service_clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8sfrontend-svc
spec:
  type: ClusterIP
  selector:
    app: k8sfrontend
  ports:
    - name: http
      protocol: TCP
      port: 3000 # This is a port that is available to the cluster, in this case it can be ~ anything
      targetPort: 8080 # This is the target port
